# katana_driver

katana/: CMakeLists.txt
katana/config/: katana_arm_controllers.yaml
katana/include/katana/: AbstractKatana.h  Katana.h  Katana300.h  KatanaNode.h  SensorStatePublisher.h  SimulatedKatana.h  joint_movement_action_controller.h  joint_trajectory_action_controller.h  katana_constants.h  katana_gripper_grasp_controller.h
katana/launch/: katana.launch  katana_450_6m180.launch
katana/src/: AbstractKatana.cpp  Katana.cpp  Katana300.cpp  KatanaNode.cpp  SensorStatePublisher.cpp  SimulatedKatana.cpp  joint_movement_action_controller.cpp  joint_trajectory_action_controller.cpp  katana_gripper_grasp_controller.cpp
katana_description/: CMakeLists.txt
katana_description/collada/: katana_450_6m180.dae
katana_description/launch/: upload_katana_450_6m180.launch
katana_description/urdf/: katana_450_6m180.urdf  katana_450_6m180.urdf.xacro  katana_450_6m180_simple.urdf.xacro  katana_450_6m180_with_controlbox.urdf.xacro
katana_moveit_ikfast_plugin/: CMakeLists.txt  katana_450_6m180_arm_moveit_ikfast_plugin_description.xml  katana_450_6m90a_arm_moveit_ikfast_plugin_description.xml  package.xml
katana_moveit_ikfast_plugin/src/: katana_450_6m180_arm_ikfast_moveit_plugin.cpp  katana_450_6m180_arm_ikfast_solver.cpp  katana_450_6m90a_arm_ikfast_moveit_plugin.cpp
kni/KNI_4.3.0/configfiles450/: katana6M180_G.cfg
